--- a/css/style.css
+++ b/css/style.css
@@ -936,7 +936,7 @@
 			border: solid 1.5em #000000;
 			height: 30em;
 			margin: 0 auto;
-			overflow: hidden;
+			overflow: auto;
 			width: 90%;
 			border-color: #000000;
 		}
@@ -948,7 +948,7 @@
 			text-decoration: none;
 			background: #fff;
 			border-radius: 100%;
-			color: #f2f2f2;
+			color: white;
 			cursor: pointer;
 			display: block;
 			font-size: 3em;
@@ -1417,7 +1417,7 @@
 /* Section/Article */
 
 	header br {
-		display: none;
+		display: inline-block;
 	}
 
 /* Feature */
@@ -1445,7 +1445,7 @@
 
 	.slider .slide img {
 		border-radius: 0.375em;
-		display: block;
+		display:  inline-block;
 		width: 100%;
 	}
 
@@ -1453,7 +1453,7 @@
 	.slider .nav-previous {
 		background:#000000;
 		border-radius: 0;
-		color: #000000;
+		color: white;
 		height: 100%;
 		margin-top: 0;
 		top: 0;
